<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="color_title">Select a color:</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="example">Example</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_orange">Orange</string>
</resources>
